--- a/src/main/resources/DetailsVoiture.fxml
+++ b/src/main/resources/DetailsVoiture.fxml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.GridPane?>
 
-<AnchorPane prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DetailsVoiture">
-    <children>
-        <Label layoutX="14.0" layoutY="14.0" text="Marque :" />
-        <Label layoutX="14.0" layoutY="49.0" text="Modèle :" />
-        <Label layoutX="14.0" layoutY="84.0" text="Couleur :" />
-        <Label layoutX="14.0" layoutY="118.0" text="Matricule :" />
-        <Label fx:id="labelMarque" layoutX="114.0" layoutY="14.0" />
-        <Label fx:id="labelModele" layoutX="114.0" layoutY="49.0" />
-        <Label fx:id="labelCouleur" layoutX="114.0" layoutY="84.0" />
-        <Label fx:id="labelMatricule" layoutX="114.0" layoutY="118.0" />
-        <Button fx:id="buttonModifier" layoutX="127.0" layoutY="155.0" mnemonicParsing="false" text="Modifier" />
-        <Button fx:id="buttonSupprimer" layoutX="222.0" layoutY="155.0" mnemonicParsing="false" text="Supprimer" />
-    </children>
-</AnchorPane>
+<?import javafx.scene.control.Button?>
+<GridPane xmlns="http://javafx.com/javafx"
+          xmlns:fx="http://javafx.com/fxml"
+          fx:controller="controllers.DetailsVoiture"
+          hgap="10" vgap="10">
+
+    <Label text="Marque:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <TextField fx:id="textFieldMarque" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+    <Label text="Modèle:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+    <TextField fx:id="textFieldModele" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+    <Label text="Couleur:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <TextField fx:id="textFieldCouleur" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+    <Label text="Matricule:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+    <TextField fx:id="textFieldMatricule" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <Button text="Modifier" onAction="#modifierVoiture" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+
+
+    <!-- Ajoutez d'autres champs selon les besoins -->
+
+</GridPane>
