--- a/src/main/resources/AfficherAppartement.fxml
+++ b/src/main/resources/AfficherAppartement.fxml
@@ -4,26 +4,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherAppartement">
-    <VBox layoutX="47.0" layoutY="98.0" spacing="10.0">
-        <ListView fx:id="listView" prefHeight="239.0" prefWidth="443.0">
-            <items>
-                <FXCollections fx:factory="observableArrayList" />
-            </items>
-        </ListView>
-    </VBox>
+    <VBox layoutX="47.0" layoutY="98.0" spacing="10.0" />
 
-    <Button layoutX="283.0" layoutY="352.0" onAction="#ajouterAppartement" text="Ajouter Apartement" />
-    <Button layoutX="128.0" layoutY="352.0" onAction="#modiferAppartement" prefHeight="26.0" prefWidth="134.0" text="Modifier Appartement" />
-    <Button layoutX="14.0" layoutY="353.0" onAction="#gererFacture" text="Gerer Facture" />
-    <Button layoutX="418.0" layoutY="352.0" onAction="#supprimerAppartement" text="Supprimer Appartement" />
-    <Button defaultButton="true" layoutX="503.0" layoutY="46.0" onAction="#actualiser" prefHeight="26.0" prefWidth="75.0" text="Actualiser" textFill="#241584" />
-     <TextField fx:id="searchNumField" layoutX="16.0" layoutY="27.0" promptText="Numéro d'Appartement" />
-    <TextField fx:id="searchNomResidentField" layoutX="16.0" layoutY="59.0" promptText="Nom Resident" />
+    <Button layoutX="459.0" layoutY="368.0" onAction="#ajouterAppartement" text="Ajouter Appartement" />
+    <Button layoutX="305.0" layoutY="367.0" onAction="#modiferAppartement" prefHeight="26.0" prefWidth="134.0" text="Modifier Appartement" />
+    <Button layoutX="189.0" layoutY="368.0" onAction="#gererFacture" text="Gerer Facture" />
+    <Button layoutX="611.0" layoutY="368.0" onAction="#supprimerAppartement" text="Supprimer Appartement" />
+    <Button defaultButton="true" layoutX="645.0" layoutY="72.0" onAction="#actualiser" prefHeight="26.0" prefWidth="75.0" text="Ac" textFill="WHITE"/>
+     <TextField fx:id="searchNumField" layoutX="437.0" layoutY="85.0" promptText="Numéro d'Appartement" />
+    <TextField fx:id="searchNomResidentField" layoutX="277.0" layoutY="85.0" promptText="Nom Resident" />
 
-    <Button layoutX="188.0" layoutY="27.0" onAction="#rechercherAppartements" text="Rechercher" />
+    <Button layoutX="189.0" layoutY="85.0" onAction="#rechercherAppartements" text="Rechercher" />
+   <ImageView fitHeight="124.0" fitWidth="150.0" layoutX="-22.0" layoutY="-3.0">
+      <image>
+         <Image url="@../../../../../Downloads/logo.png" />
+      </image>
+   </ImageView>
+     <ListView fx:id="listView" layoutX="189.0" layoutY="115.0" prefHeight="239.0" prefWidth="646.0">
+         <items>
+             <FXCollections fx:factory="observableArrayList" />
+         </items>
+     </ListView>
+   <ImageView fitHeight="26.0" fitWidth="33.0" layoutX="739.0" layoutY="13.0">
+      <image>
+         <Image url="@../../../../../Downloads/rotation.png" />
+      </image>
+   </ImageView>
 
 </AnchorPane>
