--- a/src/main/resources/AfficherVoitureAdmin.fxml
+++ b/src/main/resources/AfficherVoitureAdmin.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoitureAdmin">
+<AnchorPane prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherVoitureAdmin">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="800.0" layoutX="-13.0" layoutY="-1.0">
+        <ImageView fitHeight="750.0" fitWidth="1051.0" layoutX="-13.0" layoutY="-1.0">
             <image>
                 <Image url="@image/ListeVoiture.png" />
             </image>
@@ -20,32 +20,32 @@
         <Button fx:id="boutonGererParking" layoutX="27.0" layoutY="161.0" mnemonicParsing="false" onAction="#ouvrirAfficherParkingAdmin" opacity="0.0" prefHeight="49.0" prefWidth="142.0" text="Gérer Parking" />
 
         <!-- Ajoutez une ListView pour afficher la liste des voitures -->
-        <ListView fx:id="listeVoitures" layoutX="283.0" layoutY="165.0" prefHeight="256.0" prefWidth="231.0" />
-        <TextField fx:id="searchField" layoutX="283.0" layoutY="133.0" promptText="Rechercher..." />
-        <TextField fx:id="textFieldMarque" layoutX="605.0" layoutY="185.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-        <TextField fx:id="textFieldModele" layoutX="605.0" layoutY="234.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <TextField fx:id="textFieldCouleur" layoutX="605.0" layoutY="275.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <TextField fx:id="textFieldMatricule" layoutX="605.0" layoutY="315.0" prefHeight="25.0" prefWidth="93.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-        <Button layoutX="652.0" layoutY="376.0" onAction="#modifierVoiture" prefHeight="25.0" prefWidth="72.0" text="Modifier" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <Button fx:id="boutonSupprimer" layoutX="539.0" layoutY="376.0" mnemonicParsing="false" onAction="#supprimerVoiture" text="Supprimer" />
-        <Label layoutX="530.0" layoutY="236.0" text="Modèle:" textFill="WHITE">
+        <ListView fx:id="listeVoitures" layoutX="145.0" layoutY="283.0" prefHeight="288.0" prefWidth="290.0" />
+        <TextField fx:id="searchField" layoutX="145.0" layoutY="221.0" prefHeight="49.0" prefWidth="194.0" promptText="Rechercher..." />
+        <TextField fx:id="textFieldMarque" layoutX="774.0" layoutY="305.0" prefHeight="42.0" prefWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <TextField fx:id="textFieldModele" layoutX="774.0" layoutY="377.0" prefHeight="42.0" prefWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="textFieldCouleur" layoutX="774.0" layoutY="447.0" prefHeight="42.0" prefWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <TextField fx:id="textFieldMatricule" layoutX="774.0" layoutY="510.0" prefHeight="42.0" prefWidth="149.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Button layoutX="567.0" layoutY="610.0" onAction="#modifierVoiture" prefHeight="42.0" prefWidth="156.0" text="Modifier" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Button fx:id="boutonSupprimer" layoutX="741.0" layoutY="610.0" mnemonicParsing="false" onAction="#supprimerVoiture" prefHeight="42.0" prefWidth="156.0" text="Supprimer" />
+        <Label layoutX="559.0" layoutY="383.0" text="Modèle:" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Label layoutX="529.0" layoutY="277.0" text="Couleur:" textFill="WHITE">
+        <Label layoutX="558.0" layoutY="453.0" text="Couleur:" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Label layoutX="527.0" layoutY="317.0" text="Matricule:" textFill="WHITE">
+        <Label layoutX="558.0" layoutY="516.0" text="Matricule:" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-      <Label layoutX="530.0" layoutY="188.0" text="Marque:" textFill="WHITE">
+      <Label layoutX="558.0" layoutY="311.0" text="Marque:" textFill="#153f6f">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Label>
 
