--- a/src/main/resources/AjouterParking.fxml
+++ b/src/main/resources/AjouterParking.fxml
@@ -11,39 +11,39 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterParking">
+<AnchorPane prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterParking">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="800.0">
+        <ImageView fitHeight="750.0" fitWidth="1051.0">
             <image>
                 <Image url="@image/ajouterParking.png " />
             </image>
         </ImageView>
-        <Label layoutX="178.0" layoutY="163.0" text="Nom du parking :" textFill="WHITE">
+        <Label layoutX="210.0" layoutY="279.0" prefHeight="30.0" prefWidth="174.0" text="Nom du parking :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font></Label>
-        <TextField fx:id="nomTextField" layoutX="369.0" layoutY="161.0" prefHeight="25.0" prefWidth="174.0" />
+        <TextField fx:id="nomTextField" layoutX="560.0" layoutY="268.0" prefHeight="53.0" prefWidth="224.0" />
 
-        <Label layoutX="178.0" layoutY="225.0" text="Capacité :" textFill="WHITE">
+        <Label layoutX="210.0" layoutY="360.0" text="Capacité :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font></Label>
-        <TextField fx:id="capaciteTextField" layoutX="369.0" layoutY="223.0" prefHeight="25.0" prefWidth="174.0" />
+        <TextField fx:id="capaciteTextField" layoutX="560.0" layoutY="349.0" prefHeight="53.0" prefWidth="224.0" />
 
-        <Label layoutX="178.0" layoutY="279.0" text="Type :" textFill="WHITE">
+        <Label layoutX="210.0" layoutY="438.0" text="Type :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font></Label>
-        <ComboBox fx:id="typeComboBox" layoutX="369.0" layoutY="277.0" prefHeight="25.0" prefWidth="174.0" />
+        <ComboBox fx:id="typeComboBox" layoutX="560.0" layoutY="427.0" prefHeight="53.0" prefWidth="224.0" />
 
-        <Label layoutX="178.0" layoutY="338.0" text="Nombre actuel de voitures :" textFill="WHITE">
+        <Label layoutX="210.0" layoutY="509.0" prefHeight="53.0" prefWidth="268.0" text="Nombre actuel de voitures :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font></Label>
-        <TextField fx:id="nombreActuellesTextField" layoutX="369.0" layoutY="336.0" prefHeight="25.0" prefWidth="174.0" />
+        <TextField fx:id="nombreActuellesTextField" layoutX="560.0" layoutY="509.0" prefHeight="53.0" prefWidth="224.0" />
 
         <HBox layoutX="47.0" layoutY="300.0" spacing="20.0" />
-        <Button fx:id="boutonAjouter" layoutX="294.0" layoutY="420.0" mnemonicParsing="false" onAction="#ajouterParking" prefHeight="25.0" prefWidth="120.0" text="Ajouter" />
+        <Button fx:id="boutonAjouter" layoutX="426.0" layoutY="633.0" mnemonicParsing="false" onAction="#ajouterParking" prefHeight="53.0" prefWidth="199.0" text="Ajouter" />
         <Accordion />
     </children>
 </AnchorPane>
