--- a/src/main/resources/AjouterVoiture.fxml
+++ b/src/main/resources/AjouterVoiture.fxml
@@ -13,61 +13,61 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterVoiture">
+<AnchorPane prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterVoiture">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="800.0">
+        <ImageView fitHeight="750.0" fitWidth="1051.0">
             <image>
                 <Image url="@image/Av.png" />
             </image>
         </ImageView>
 
-        <TextField fx:id="marqueField" layoutX="224.0" layoutY="124.0" promptText="Marque" />
-        <TextField fx:id="modeleField" layoutX="224.0" layoutY="178.0" promptText="Modèle" />
-        <TextField fx:id="couleurField" layoutX="224.0" layoutY="228.0" promptText="Couleur" />
-        <TextField fx:id="matriculeField" layoutX="224.0" layoutY="279.0" promptText="Matricule" />
-        <Button fx:id="telechargerButton" layoutX="499.0" layoutY="508.0" onAction="#handleTelechargerButton" text="Télécharger QR Code" visible="false" />
-        <Button fx:id="consulterVoituresButton" layoutX="338.0" layoutY="508.0" mnemonicParsing="false" onAction="#handleConsulterButton" prefHeight="25.0" prefWidth="149.0" text="Consulter Voitures" />
+        <TextField fx:id="marqueField" layoutX="326.0" layoutY="232.0" prefHeight="30.0" prefWidth="149.0" promptText="Marque" />
+        <TextField fx:id="modeleField" layoutX="326.0" layoutY="295.0" promptText="Modèle" />
+        <TextField fx:id="couleurField" layoutX="326.0" layoutY="354.0" promptText="Couleur" />
+        <TextField fx:id="matriculeField" layoutX="326.0" layoutY="408.0" promptText="Matricule" />
+        <Button fx:id="telechargerButton" layoutX="710.0" layoutY="639.0" onAction="#handleTelechargerButton" prefHeight="50.0" prefWidth="192.0" text="Télécharger QR Code" visible="false" />
+        <Button fx:id="consulterVoituresButton" layoutX="350.0" layoutY="639.0" mnemonicParsing="false" onAction="#handleConsulterButton" prefHeight="50.0" prefWidth="192.0" text="Consulter Voitures" />
 
-        <Button fx:id="ajouterButton" layoutX="134.0" layoutY="508.0" onAction="#handleAjouterButton" prefHeight="25.0" prefWidth="149.0" text="Ajouter" />
-        <ProgressBar fx:id="progressBar" layoutX="54.0" layoutY="473.0" prefHeight="18.0" prefWidth="318.0" />
-        <ComboBox fx:id="typeComboBox" layoutX="223.0" layoutY="325.0" prefHeight="25.0" prefWidth="149.0" />
-        <ListView fx:id="parkingsListView" layoutX="223.0" layoutY="377.0" onMouseClicked="#handleParkingSelection" prefHeight="74.0" prefWidth="149.0">
+        <Button fx:id="ajouterButton" layoutX="97.0" layoutY="639.0" onAction="#handleAjouterButton" prefHeight="50.0" prefWidth="192.0" text="Ajouter" />
+        <ProgressBar fx:id="progressBar" layoutX="97.0" layoutY="610.0" prefHeight="18.0" prefWidth="443.0" />
+        <ComboBox fx:id="typeComboBox" layoutX="326.0" layoutY="458.0" prefHeight="25.0" prefWidth="149.0" />
+        <ListView fx:id="parkingsListView" layoutX="326.0" layoutY="515.0" onMouseClicked="#handleParkingSelection" prefHeight="74.0" prefWidth="149.0">
             <!-- Autres attributs et éléments de configuration -->
         </ListView>
 
-        <ImageView fx:id="qrCodeImageView" fitHeight="281.0" fitWidth="271.0" layoutX="438.0" layoutY="148.0" />
+        <ImageView fx:id="qrCodeImageView" fitHeight="324.0" fitWidth="336.0" layoutX="638.0" layoutY="232.0" />
 
-        <Label layoutX="60.0" layoutY="127.0" prefHeight="20.0" prefWidth="91.0" text="Marque :" textFill="WHITE">
+        <Label layoutX="92.0" layoutY="232.0" prefHeight="30.0" prefWidth="149.0" text="Marque :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Label layoutX="60.0" layoutY="181.0" prefHeight="20.0" prefWidth="91.0" text="Modèle :" textFill="WHITE">
+        <Label layoutX="92.0" layoutY="292.0" prefHeight="30.0" prefWidth="149.0" text="Modèle :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Label layoutX="60.0" layoutY="231.0" prefHeight="20.0" prefWidth="91.0" text="Couleur :" textFill="WHITE">
+        <Label layoutX="92.0" layoutY="351.0" prefHeight="30.0" prefWidth="149.0" text="Couleur :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
-        <Label layoutX="60.0" layoutY="281.0" prefHeight="20.0" prefWidth="91.0" text="Matricule :" textFill="WHITE">
+        <Label layoutX="92.0" layoutY="405.0" prefHeight="30.0" prefWidth="149.0" text="Matricule :" textFill="#153f6f">
             <font>
-                <Font name="System Bold" size="14.0" />
+                <Font name="System Bold" size="20.0" />
             </font>
         </Label>
         <VBox alignment="CENTER" spacing="10">
             <HBox alignment="CENTER" spacing="10" />
         </VBox>
-      <Label layoutX="60.0" layoutY="328.0" prefHeight="20.0" prefWidth="91.0" text="Type :" textFill="WHITE">
+      <Label layoutX="92.0" layoutY="455.0" prefHeight="30.0" prefWidth="149.0" text="Type :" textFill="#153f6f">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="53.0" layoutY="404.0" prefHeight="20.0" prefWidth="106.0" text="Nom Parking :" textFill="WHITE">
+      <Label layoutX="92.0" layoutY="535.0" prefHeight="30.0" prefWidth="149.0" text="Nom Parking :" textFill="#153f6f">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="20.0" />
          </font>
       </Label>
     </children>
